--- a/css/index.css
+++ b/css/index.css
@@ -1,8 +1,9 @@
 html, body {
-    margin: 0;
+    margin: 0 auto;
     padding: 0;
     font-family: 'Source Sans Pro', sans-serif;
     box-sizing: border-box;
+    width:375px;
 }
 
 header{
